@@ -2,6 +2,7 @@ package chapter_3.chapter_3_2_Mapping;
 
 import io.reactivex.Observable;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class CH3_2_03_StartWith_StartWithArray {
@@ -15,7 +16,7 @@ public class CH3_2_03_StartWith_StartWithArray {
         Observable<String> observable = Observable.just("TA", "DK", "SF");
         Observable.just("Weaver", "Troll", "Doom")
                 .startWith(observable)
-                .startWith(List.of("Zeus", "Night Stalker"))
+                .startWith(Arrays.asList("Zeus", "Night Stalker"))
                 .startWithArray("1", "2")
                 .subscribe(System.out::println);
     }
